--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Todo List</title>
   </head>
   <body>
-    <section class="main">
+    <main class="main">
       <ul class="todos">
         <li class="static-li">
           <p>Today's To Do</p>
@@ -29,6 +29,6 @@
           </form>
         </li>
       </ul>
-    </section>
+    </main>
   </body>
 </html>
